[gd_scene load_steps=8 format=1]

[ext_resource path="res://resources/Theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/Game/Game.gd" type="Script" id=2]
[ext_resource path="res://scenes/Map/Map.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Game/PlayerInfo.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Game/Inventory.gd" type="Script" id=5]
[ext_resource path="res://scenes/Game/InventorySlot.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Game/InventoryMenu.gd" type="Script" id=7]

[node name="Game" type="Container"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 8.0
margin/top = 6.0
margin/right = 8.0
margin/bottom = 6.0
script/script = ExtResource( 2 )

[node name="frame" type="HBoxContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="left" type="VBoxContainer" parent="frame"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 380.0
margin/bottom = 588.0
alignment = 0

[node name="map" type="Control" parent="frame/left"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 380.0
margin/bottom = 434.0

[node name="Viewport" type="Viewport" parent="frame/left/map"]

editor/display_folded = true
rect = Rect2( 0, 0, 380, 434 )
own_world = false
world = null
transparent_bg = false
render_target/enabled = false
render_target/v_flip = false
render_target/clear_on_new_frame = true
render_target/filter = false
render_target/gen_mipmaps = false
render_target/update_mode = 2
audio_listener/enable_2d = false
audio_listener/enable_3d = false
physics/object_picking = false
gui/disable_input = false

[node name="Map" parent="frame/left/map/Viewport" instance=ExtResource( 3 )]

[node name="MessageBox" type="RichTextLabel" parent="frame/left"]

rect/min_size = Vector2( 0, 150 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 438.0
margin/right = 380.0
margin/bottom = 588.0
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1

[node name="right" type="VBoxContainer" parent="frame"]

rect/min_size = Vector2( 400, 0 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 384.0
margin/top = 0.0
margin/right = 784.0
margin/bottom = 588.0
alignment = 0

[node name="PlayerInfo" parent="frame/right" instance=ExtResource( 4 )]

size_flags/vertical = 2
margin/right = 400.0
margin/bottom = 98.0

[node name="PanelContainer" type="PanelContainer" parent="frame/right"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 102.0
margin/right = 400.0
margin/bottom = 343.0

[node name="Activity" type="PanelContainer" parent="frame/right"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 347.0
margin/right = 400.0
margin/bottom = 588.0

[node name="box" type="VBoxContainer" parent="frame/right/Activity"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 6.0
margin/top = 6.0
margin/right = 394.0
margin/bottom = 235.0
alignment = 0

[node name="InventoryAction" type="HBoxContainer" parent="frame/right/Activity/box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 388.0
margin/bottom = 32.0
alignment = 0

[node name="Drop" type="Button" parent="frame/right/Activity/box/InventoryAction"]

rect/min_size = Vector2( 40, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 43.0
margin/bottom = 32.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "d(R)op"
flat = false

[node name="Throw" type="Button" parent="frame/right/Activity/box/InventoryAction"]

rect/min_size = Vector2( 40, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 47.0
margin/top = 0.0
margin/right = 97.0
margin/bottom = 32.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "(T)hrow"
flat = false

[node name="Grab" type="Button" parent="frame/right/Activity/box/InventoryAction"]

rect/min_size = Vector2( 40, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 101.0
margin/top = 0.0
margin/right = 145.0
margin/bottom = 32.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "(G)rab"
flat = false

[node name="ItemName" type="Label" parent="frame/right/Activity/box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 36.0
margin/right = 388.0
margin/bottom = 50.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Inventory" type="GridContainer" parent="frame/right/Activity/box"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 54.0
margin/right = 388.0
margin/bottom = 182.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 8
script/script = ExtResource( 5 )

[node name="InventorySlot" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/right = 32.0
margin/bottom = 32.0

[node name="InventorySlot16" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 32.0
margin/right = 64.0
margin/bottom = 32.0

[node name="InventorySlot1" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 64.0
margin/right = 96.0
margin/bottom = 32.0

[node name="InventorySlot16 2" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 96.0
margin/right = 128.0
margin/bottom = 32.0

[node name="InventorySlot2" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 128.0
margin/right = 160.0
margin/bottom = 32.0

[node name="InventorySlot16 3" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 160.0
margin/right = 192.0
margin/bottom = 32.0

[node name="InventorySlot3" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 192.0
margin/right = 224.0
margin/bottom = 32.0

[node name="InventorySlot16 4" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 224.0
margin/right = 256.0
margin/bottom = 32.0

[node name="InventorySlot4" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/top = 32.0
margin/right = 32.0
margin/bottom = 64.0

[node name="InventorySlot16 5" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 32.0
margin/top = 32.0
margin/right = 64.0
margin/bottom = 64.0

[node name="InventorySlot5" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 64.0
margin/top = 32.0
margin/right = 96.0
margin/bottom = 64.0

[node name="InventorySlot16 6" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 96.0
margin/top = 32.0
margin/right = 128.0
margin/bottom = 64.0

[node name="InventorySlot6" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 128.0
margin/top = 32.0
margin/right = 160.0
margin/bottom = 64.0

[node name="InventorySlot16 7" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 160.0
margin/top = 32.0
margin/right = 192.0
margin/bottom = 64.0

[node name="InventorySlot7" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 192.0
margin/top = 32.0
margin/right = 224.0
margin/bottom = 64.0

[node name="InventorySlot16 8" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 224.0
margin/top = 32.0
margin/right = 256.0
margin/bottom = 64.0

[node name="InventorySlot8" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/top = 64.0
margin/right = 32.0
margin/bottom = 96.0

[node name="InventorySlot16 9" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 32.0
margin/top = 64.0
margin/right = 64.0
margin/bottom = 96.0

[node name="InventorySlot9" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 64.0
margin/top = 64.0
margin/right = 96.0
margin/bottom = 96.0

[node name="InventorySlot16 10" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 96.0
margin/top = 64.0
margin/right = 128.0
margin/bottom = 96.0

[node name="InventorySlot10" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 128.0
margin/top = 64.0
margin/right = 160.0
margin/bottom = 96.0

[node name="InventorySlot16 11" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 160.0
margin/top = 64.0
margin/right = 192.0
margin/bottom = 96.0

[node name="InventorySlot11" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 192.0
margin/top = 64.0
margin/right = 224.0
margin/bottom = 96.0

[node name="InventorySlot16 12" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 224.0
margin/top = 64.0
margin/right = 256.0
margin/bottom = 96.0

[node name="InventorySlot12" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/top = 96.0
margin/right = 32.0
margin/bottom = 128.0

[node name="InventorySlot16 13" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 32.0
margin/top = 96.0
margin/right = 64.0
margin/bottom = 128.0

[node name="InventorySlot13" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 64.0
margin/top = 96.0
margin/right = 96.0
margin/bottom = 128.0

[node name="InventorySlot16 14" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 96.0
margin/top = 96.0
margin/right = 128.0
margin/bottom = 128.0

[node name="InventorySlot14" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 128.0
margin/top = 96.0
margin/right = 160.0
margin/bottom = 128.0

[node name="InventorySlot16 15" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 160.0
margin/top = 96.0
margin/right = 192.0
margin/bottom = 128.0

[node name="InventorySlot15" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 192.0
margin/top = 96.0
margin/right = 224.0
margin/bottom = 128.0

[node name="InventorySlot16 16" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 6 )]

margin/left = 224.0
margin/top = 96.0
margin/right = 256.0
margin/bottom = 128.0

[node name="InventoryLabel" type="Label" parent="frame/right/Activity/box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 186.0
margin/right = 388.0
margin/bottom = 200.0
text = "Inventory"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="InventoryObjects" type="Node2D" parent="frame/right/Activity/box"]

visibility/visible = false
transform/pos = Vector2( -6, -6 )

[node name="HSeparator" type="HSeparator" parent="frame/right/Activity/box"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 202.0
margin/right = 388.0
margin/bottom = 205.0

[node name="FloorLabel" type="Label" parent="frame/right/Activity/box"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 209.0
margin/right = 388.0
margin/bottom = 222.0
text = "On Floor"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Floor" type="HBoxContainer" parent="frame/right/Activity/box"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 226.0
margin/right = 388.0
margin/bottom = 258.0
custom_constants/separation = 0
alignment = 0

[node name="InventorySlot" parent="frame/right/Activity/box/Floor" instance=ExtResource( 6 )]

margin/right = 32.0
margin/bottom = 32.0

[node name="InventorySlot1" parent="frame/right/Activity/box/Floor" instance=ExtResource( 6 )]

margin/left = 32.0
margin/right = 64.0
margin/bottom = 32.0

[node name="InventorySlot2" parent="frame/right/Activity/box/Floor" instance=ExtResource( 6 )]

margin/left = 64.0
margin/right = 96.0
margin/bottom = 32.0

[node name="InventorySlot3" parent="frame/right/Activity/box/Floor" instance=ExtResource( 6 )]

margin/left = 96.0
margin/right = 128.0
margin/bottom = 32.0

[node name="InventorySlot4" parent="frame/right/Activity/box/Floor" instance=ExtResource( 6 )]

margin/left = 128.0
margin/right = 160.0
margin/bottom = 32.0

[node name="InventorySlot5" parent="frame/right/Activity/box/Floor" instance=ExtResource( 6 )]

margin/left = 160.0
margin/right = 192.0
margin/bottom = 32.0

[node name="InventorySlot6" parent="frame/right/Activity/box/Floor" instance=ExtResource( 6 )]

margin/left = 192.0
margin/right = 224.0
margin/bottom = 32.0

[node name="InventorySlot7" parent="frame/right/Activity/box/Floor" instance=ExtResource( 6 )]

margin/left = 224.0
margin/right = 256.0
margin/bottom = 32.0

[node name="InventoryMenu" type="PopupPanel" parent="."]

process/pause_mode = 2
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
popup/exclusive = false
script/script = ExtResource( 7 )

[node name="frame" type="VBoxContainer" parent="InventoryMenu"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="Header" type="Label" parent="InventoryMenu/frame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 1008.0
margin/bottom = 17.0
text = "Choose Item(s) to drop.."
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSeparator" type="HSeparator" parent="InventoryMenu/frame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 21.0
margin/right = 1008.0
margin/bottom = 24.0

[node name="Contents" type="HBoxContainer" parent="InventoryMenu/frame"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 28.0
margin/right = 1008.0
margin/bottom = 567.0
alignment = 0

[node name="scroll" type="ScrollContainer" parent="InventoryMenu/frame/Contents"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 251.0
margin/bottom = 539.0
scroll/horizontal = false
scroll/vertical = true

[node name="Items" type="VBoxContainer" parent="InventoryMenu/frame/Contents/scroll"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 251.0
margin/bottom = 0.0
alignment = 0

[node name="Info" type="PanelContainer" parent="InventoryMenu/frame/Contents"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
size_flags/stretch_ratio = 3.0
margin/left = 255.0
margin/top = 0.0
margin/right = 1008.0
margin/bottom = 539.0

[node name="Footer" type="Label" parent="InventoryMenu/frame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 571.0
margin/right = 1008.0
margin/bottom = 588.0
text = "T to confirm. Esc or RMB to cancel"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="frame/right/Activity/box/InventoryAction/Drop" to="frame/right/Activity/box/Inventory" method="_on_Drop_pressed"]

[connection signal="pressed" from="frame/right/Activity/box/InventoryAction/Throw" to="frame/right/Activity/box/Inventory" method="_on_Throw_pressed"]

[connection signal="pressed" from="frame/right/Activity/box/InventoryAction/Grab" to="frame/right/Activity/box/Inventory" method="_on_Grab_pressed"]


